# kernel

./: .editorconfig  .gdb_history  .gitignore  .gitmodules  .travis.yml  BUILDING.md  Brewfile  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  Notes.md  README.md  Vagrantfile  Xargo.toml  build.rs  rustfmt.toml  search-index.js  tokamak.toml  x86_32-sos-kernel-gnu.json  x86_64-sos-kernel-gnu.json  x86_64-unknown-none-gnu.json  x86_64-unknown-sos-gnu.json
alloc/: Alignment.t.html  Cargo.toml  Framesque.t.html  enum.AllocErr.html  index.html  struct.CannotReallocInPlace.html  struct.Excess.html  struct.Layout.html  trait.Allocator.html  trait.Framesque.html  type.Address.html  type.Alignment.html  type.AllocResult.html  type.Capacity.html  type.Size.html
alloc/borrow/: BorrowedPtr.t.html  index.html  sidebar-items.js  struct.Borrowed.html  struct.BorrowedPtr.html  trait.Lender.html
alloc/buddy/: BuddyHeapAllocator.t.html  index.html  sidebar-items.js  struct.BuddyHeapAllocator.html  struct.FreeBlock.html  struct.Heap.html  type.FreeList.html
alloc/bump_ptr/: BumpPtr.t.html  index.html  sidebar-items.js  struct.BumpPtr.html
alloc/frame/: Lender.t.html  index.html  sidebar-items.js  struct.BorrowedFrame.html  struct.BorrowedFrameRange.html  trait.Allocator.html  trait.Lender.html
alloc/src/: borrow.rs  bump_ptr.rs  free.rs  lib.rs  place.rs  stack.rs  system.rs
alloc/system/: SystemAllocator.t.html  Tier.t.html  enum.Tier.html  index.html  struct.SystemAllocator.html
boot/: Cargo.toml  README.md  x86_32-sos-bootstrap-gnu.json
boot/src/: lib.rs  main.rs
cpu/: Cargo.toml  PrivilegeLevel.t.html  enum.PrivilegeLevel.html  index.html  isr.m.html  macro.isr.html  sidebar-items.js  struct.Port.html  struct.Registers.html  struct.UnsafePort.html
cpu/context/: index.html  sidebar-items.js  struct.Context.html  struct.InterruptFrame.html  struct.Registers.html
cpu/control_regs/: CrState.t.html  dump.v.html  fn.dump.html  index.html  sidebar-items.js  struct.CrState.html
cpu/dtable/: DTable.t.html  index.html  sidebar-items.js  struct.Pointer.html  trait.DTable.html
cpu/flags/: CF.v.html  DF.v.html  IOPL.v.html  IOPL_RING_0.v.html  IOPL_RING_2.v.html  IOPL_RING_3.v.html  PF.v.html  RF.v.html  SF.v.html  TF.v.html  VIP.v.html  constant.AC.html  constant.AF.html  constant.CF.html  constant.DF.html  constant.ID.html  constant.IF.html  constant.IOPL.html  constant.IOPL_RING_0.html  constant.IOPL_RING_1.html  constant.IOPL_RING_2.html  constant.IOPL_RING_3.html  constant.NT.html  constant.OF.html  constant.PF.html  constant.RESERVED.html  constant.RF.html  constant.SF.html  constant.TF.html  constant.VIF.html  constant.VIP.html  constant.VM.html  constant.ZF.html  fn.read.html  index.html  sidebar-items.js  struct.Flags.html
cpu/interrupts/: NUM_EXCEPTIONS.v.html  constant.NUM_EXCEPTIONS.html  empty_handler.v.html  ex1.v.html  ex11.v.html  ex19.v.html  ex5.v.html  fn.empty_handler.html  fn.ex0.html  fn.ex1.html  fn.ex10.html  fn.ex11.html  fn.ex12.html  fn.ex13.html  fn.ex16.html  fn.ex17.html  fn.ex18.html  fn.ex19.html  fn.ex2.html  fn.ex4.html  fn.ex5.html  fn.ex6.html  fn.ex7.html  fn.ex8.html  fn.page_fault.html  fn.test.html  fn.timer.html  index.html  page_fault.v.html  sidebar-items.js  static.EXCEPTIONS.html  struct.ExceptionInfo.html  test.v.html  type.ErrorCodeHandler.html  type.InterruptHandler.html
cpu/msr/: IA32_EFER.v.html  constant.IA32_EFER.html  fn.enable_nxe.html  fn.read.html  fn.write.html  index.html  sidebar-items.js
cpu/segment/: ACCESSED.v.html  AVAILABLE.v.html  CODE_ACCESSED.v.html  CODE_DATA_ACC.v.html  CodeFlags.t.html  DataFlags.t.html  Descriptor.t.html  GDT.v.html  GDT_SIZE.v.html  GRANULARITY.v.html  Gdt.t.html  LIMIT.v.html  RPL.v.html  RPL_RING_0.v.html  RPL_RING_1.v.html  RPL_RING_3.v.html  SysType.t.html  TI_GDT.v.html  TI_LDT.v.html  constant.ACCESSED.html  constant.AVAILABLE.html  constant.CODE_ACCESSED.html  constant.CODE_DATA_ACC.html  constant.CONFORMING.html  constant.DATA_ACCESSED.html  constant.DEFAULT_SIZE.html  constant.DESCR_TYPE.html  constant.DPL.html  constant.EXECUTE.html  constant.EXEC_ONLY.html  (+27 more)
elf/: Cargo.toml  ElfResult.t.html  ElfWord.t.html  FileHeader.t.html  ProgramHeader.t.html  README.md  Section.t.html  index.html  sidebar-items.js  struct.Image.html  trait.ElfWord.html  type.ElfResult.html  type.FileHeader.html  type.ProgramHeader.html  type.Section.html
memory/: Addr.m.html  Addr.t.html  Cargo.toml  FrameRange.t.html  MemRange.t.html  PAGE_SHIFT.v.html  PAddr.t.html  Page.t.html  PageRange.t.html  PageRangeIter.t.html  VAddr.t.html  VirtualPage.t.html  constant.PAGE_SHIFT.html  constant.PAGE_SIZE.html  index.html  macro.Addr.html  sidebar-items.js  struct.PAddr.html  struct.PageRange.html  struct.PageRangeIter.html  struct.PhysicalPage.html  struct.RangeIter.html  struct.VAddr.html  struct.VirtualPage.html  trait.Addr.html  trait.MemRange.html  trait.Page.html  type.FrameRange.html  type.PageRange.html
paging/: Cargo.toml  MapErr.t.html  MapResult.t.html  Mapper.t.html  enum.MapErr.html  fn.kernel_remap.html  fn.test_paging.html  index.html  sidebar-items.js  trait.Mapper.html  type.MapResult.html
params/: Cargo.toml  ElfSections.t.html  InitParams.t.html  index.html  sidebar-items.js  struct.InitParams.html  type.ElfSections.html
util/: Align.t.html  Cargo.toml  enum.Void.html  forward_ref_binop.m.html  impl_fmt.m.html  impl_ops.m.html  index.html  macro.expr.html  macro.forward_ref_binop.html  macro.impl_assign_ops!.html  macro.impl_assign_ops.html  macro.impl_fmt.html  macro.impl_ops.html  sidebar-items.js  trait.Align.html
vga/: Buffer.t.html  Cargo.toml  Palette.t.html  Terminal.t.html  X_MAX.v.html  Y_MAX.v.html  constant.X_MAX.html  constant.Y_MAX.html  enum.Color.html  index.html  kinfoln.m.html  macro.attempt!.html  macro.attempt.html  macro.kinfo!.html  macro.kinfo.html  macro.kinfoln.html  macro.print.html  macro.println.html  sidebar-items.js  static.CONSOLE.html  struct.Char.html  struct.Palette.html  struct.Terminal.html  type.Buffer.html
(+1604 files in other folders)
