[package]
name = "sos_kernel"
version = "0.1.0"
authors = [ # hacked around by
            "Hawk Weisman <hi@hawkweisman.me>"
          , # based on code by
            "Philipp Oppermann <dev@phil-opp.com>"
          ]
build = "build.rs"

# [lib]
# crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []
trace = []

[dependencies]
rlibc = "0.1.4"
spin = "0.3.5"
once = "0.3.2"
bitflags = "0.7"

[dependencies.custom_derive]
git = "https://github.com/DanielKeep/rust-custom-derive.git"
version = "0.1.6"
default-features = false

[dependencies.sos_alloc]
path = "lib/sos_alloc"
features = ["buddy_as_system"]

[dependencies.sos_vga]
path = "lib/sos_vga"
features = ["system_term"]

[dependencies.clippy]
version = "0.0.60"
optional = true

[build-dependencies]
nasm-rs = { git = "https://github.com/medek/nasm-rs" }
