[package]
name = "sos_kernel"
version = "0.1.0"
authors = [ # hacked around by
            "Eliza Weisman <eliza@elizas.website>"
          , # based on code by
            "Philipp Oppermann <dev@phil-opp.com>"
          ]

build = "build.rs"
# build = false
# [[bin]]
# name = "sos_kernel_full"

# [lib]
# crate-type = ["staticlib"]
#

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
panic = "abort"

[features]
default = []
trace = []

[dependencies]
rlibc = "0.1.4"
spin = "0.4.6"
once = "0.3.2"
bitflags = "0.7"
cpu = { path = "cpu" }
memory = { path = "memory" }
util = { path = "util" }
elf = { path = "elf" }
paging = { path = "paging" }
params = { path = "params" }

[dependencies.log]
version = "0.3.6"
default-features = false
features = ["release_max_level_info"]

[dependencies.lazy_static]
version = "0.2.11"
features = ["spin_no_std"]

[dependencies.vga]
path = "vga"
features = ["kinfo", "system_term"]

[dependencies.sos_alloc]
path = "sos_alloc"
features = ["buddy", "system", "borrow", "buddy_as_system"]

[dependencies.clippy]
version = "0.0.60"
optional = true
