[package]
name = "alloc"
version = "0.1.0"
authors = ["Eliza Weisman <hi@hawkweisman.me>"]

[features]
default = ["buddy", "bump_ptr"]
buddy = ["sos_intrusive"]
system = ["params", "spin"]
bump_ptr = []
first_fit = ["spin", "arrayvec"]

[dependencies.log]
version = "0.3.6"
default-features = false
features = ["release_max_level_info"]

[dependencies.memory]
path = "../memory"

[dependencies.spin]
version = "0.3.5"
optional = true

[dependencies.sos_intrusive]
path = "../sos_intrusive"
optional = true

[dependencies.arrayvec]
version = "0.3.16"
default-features = false
optional = true

[dependencies.once]
version = "0.3.2"
optional = true

[dependencies.params]
path = "../params"
optional = true
