[package]
name = "boot32"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@elizas.website>"]

[lib]
crate-type = ["staticlib"]

# [[bin]]
# name = "libboot32.a"

[features]
default = ["log"]
log = []

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
panic = "abort"

[dependencies]
rlibc = "0.1.4"
