[package]
name = "elf"
version = "0.0.1"
authors = [ "Eliza Weisman <hi@hawkweisman.me>" ]

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
panic = "abort"

[dependencies]
bitflags = "0.7"
memory = { path = "../memory" }

[dependencies.macro-attr]
git = "https://github.com/DanielKeep/rust-custom-derive.git"
version = "0.2.1"
default-features = false
