[package]
name = "sos_alloc"
version = "0.1.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]

[features]
default = ["simple", "buddy"]
simple = ["multiboot"]
trace = ["sos_vga"]
buddy = []
as_system = []
buddy_as_system = ["spin", "as_system"]
multiboot = ["sos_multiboot2"]

[dependencies.sos_multiboot2]
path = "../sos_multiboot2"
optional = true

[dependencies.spin]
version = "*"
optional = true

[dependencies.sos_vga]
path = "../sos_vga"
features = ["system_term"]
optional = true 
