[package]
name = "sos_alloc"
version = "0.1.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]

[features]
default = ["simple", "buddy"]
simple = ["multiboot"]
trace = ["sos_vga"]
buddy = ["sos_intrusive"]
as_system = []
buddy_as_system = ["spin", "as_system"]
multiboot = ["sos_multiboot2"]

[dependencies.sos_multiboot2]
path = "../sos_multiboot2"
optional = true

[dependencies.spin]
git = "https://github.com/mvdnes/spinlock-rs.git"
rev = "b105b38c64f30f94aa44fc7f116b2adc0759f192"
optional = true

[dependencies.sos_vga]
path = "../sos_vga"
features = ["log"]
optional = true

[dependencies.sos_intrusive]
path = "../sos_intrusive"
optional = true
